@@ -88,3 +88,4 @@
 20231024 ./watchlist/c/l.sh added.
 20231024 ./watchlist/c/top.sh added.
 20231024 ./watchlist/c/walk.sh added.
+20231024 ./watchlist/c/ver-d.sh added.
